# ndatautils

./: .gitignore  AUTHORS  LICENSE  README.md  setup.cfg
ndatautils/: __init__.py  datapath.py  fileloader.py  in12parser.py  instrumentloader.py  masks.py  utils.py
ndatautils/meta_aliases/: RESEDA_TOF-TOF-furnace_aliases  RESEDA_all_metadata
ndatautils/miezefitter/: __init__.py  dreduction.py  model.py  reductionjob.py  sinefitter.py
tests/: test_ASCII.py  test_MIRA_tof.py  test_RESEDA_pad.py  test_RESEDA_tof.py  test_datapath.py  test_fileloaderbase.py  test_instrumentloader.py  test_io_compatibility.py  test_reduction.py  test_utils_fit_beam_center.py
tests/outdated/: test_fileloaderbase.py  test_instrumentloader.py  test_io_compatibility.py  test_utils_fit_beam_center.py
tests/testdata/: 00144330.pad  utils_fit_beam_center.npz
