[metadata]
name = ndatautils

version = 0.1.0

author = Lukas Beddrich
author_email = lukas.beddrich@frm2.tum.de
url = https://github.com/LukasBeddrich/ndatautils

description = package for neutron scattering data handling aquired with NICOS
long_description = file: README.md
long_description_content_type = text/markdown

classifiers = 
  Development Status :: 1 - Planning
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3.7

license = MIT

[options]
packages = find:
install_requires =
  numpy
  matplotlib
  lmfit

#[options.entry_points]
#console_scripts =
#    primer_2020 = primer_2020.cli:entry_point
#
#[tool:pytest]
#addopts = --doctest-modules
